Prevent default touch action on mobile devices

--- a/src/app/circle/circle.component.css
+++ b/src/app/circle/circle.component.css
@@ -2,6 +2,7 @@ circle {
     fill: transparent;
     stroke: gray;
     stroke-width: 2px;
+    touch-action: none;
 }
 circle.hovered {
     fill: #ff8080;
